# amplifier-shadow

./: README.md  pyproject.toml
.github/workflows/: shadow-tests.yml
ai_working/designs/: SHADOW_ENVIRONMENT_ARCHITECTURE.md
src/amplifier_shadow/: __init__.py  cli.py  gateway.py  platform.py
templates/: Dockerfile.workspace  docker-compose.yaml
tests/: run_shadow_tests.sh  test_collection_install.py  test_profile_loading.py
